--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
   "version": "0.0.1",
   "main": "lib/main.js",
   "bin": "bin/valence.js",
-  "preferences": [{
-    "name": "logDeviceProtocolTraffic",
-    "title": "Log the protocol traffic to and from the device",
-    "type": "bool",
-    "value": true,
-    "hidden": true
-  }, {
-    "name": "logDevToolsProtocolTraffic",
-    "title": "Log the protocol traffic to and from the toolbox",
-    "type": "bool",
-    "value": false,
-    "hidden": true
-  }, {
-    "name": "logMessageThreshold",
-    "title": "Maximum amount of chars to print in log messages, 0 means no limit",
-    "type": "integer",
-    "value": 0,
-    "hidden": true
-  }]
+  "preferences": [
+    {
+      "name": "logDeviceProtocolTraffic",
+      "title": "Log the protocol traffic to and from the device",
+      "type": "bool",
+      "value": true,
+      "hidden": true
+    },
+    {
+      "name": "logDevToolsProtocolTraffic",
+      "title": "Log the protocol traffic to and from the toolbox",
+      "type": "bool",
+      "value": false,
+      "hidden": true
+    },
+    {
+      "name": "logMessageThreshold",
+      "title": "Maximum amount of chars to print in log messages, 0 means no limit",
+      "type": "integer",
+      "value": 0,
+      "hidden": true
+    }
+  ],
+  "dependencies": {
+    "ws": "^0.8.0"
+  }
 }
