--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     }
   ],
   "dependencies": {
+    "babel-core": "^6.2.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.1.18",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-plugin-transform-es2015-parameters": "^6.1.18",
+    "babel-plugin-transform-es2015-spread": "^6.1.18",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-runtime": "^6.2.0",
     "ws": "^0.8.0"
   }
 }
